# Weaver

./: .gitignore  CONTRIBUTING.md  PROJECT_DOCS.md  README.md  SMART_SYSTEM_GUIDE.md  Weaver.spec  boom.rar  build_exe.py  element_selectors.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  save_page_tool.py  医保下载页.htm
.agent/rules/: contributing.md
.github/workflows/: ci.yml
app/: config.py
app/application/: __init__.py
app/application/orchestrator/: __init__.py  fill_session_controller.py
app/application/services/: __init__.py  filling_service.py  pagination_service.py  scanning_service.py
app/config/element_fingerprints/: add_product_button.json
app/core/: anchor_matcher.py  anchor_resolver.py  browser.py  element_fingerprint.py  element_locator.py  excel.py  fill_progress_manager.py  fill_queue.py  launcher.py  pagination_controller.py  smart_form_analyzer.py  smart_form_filler.py  smart_matcher.py
app/core/analyzer/: __init__.py  iframe_scanner.py  page_scanner.py
app/core/filler/: __init__.py  element_ui_adapter.py  element_ui_filler.py  event_simulator.py
app/customizations/: __init__.py
app/customizations/kuche_hospital/: __init__.py  consumable_processor.py  element_loader.py  start_dialog.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  anchor_config.py  element_fingerprint.py  fill_models.py  fill_task.py
app/domain/interfaces/: filler.py  (+3 more)
app/editions/: __init__.py  base_edition.py  registry.py
app/infrastructure/: __init__.py
app/ui/: base_components.py  main_window.py  mapping_canvas.py  process_window.py  styles.py
app/utils/: __init__.py  coordinate_mapper.py  js_store.py  logger.py  port_check.py
browser_profile/: Local State
browser_profile/Default/: BrowsingTopicsState  DIPS  Favicons  History  Network Action Predictor  Preferences  Secure Preferences  Shortcuts  Top Sites  Web Data  passkey_enclave_state
browser_profile/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  f_00000b  f_00000c  f_00000d  f_00000e  f_00000f  f_000010  index
browser_profile/GraphiteDawnCache/: data_1  index
browser_profile/Safe Browsing/: ChromeExtMalware.store  ChromeExtMalware.store.32_13410709452934027  UrlBilling.store  UrlBilling.store.4_13410819095914255  UrlBilling.store.4_13410820919842660  UrlCsdAllowlist.store  UrlCsdDownloadAllowlist.store  UrlHighConfidenceAllowlist.store  UrlMalBin.store  UrlMalBin.store.4_13410819095911160  UrlMalBin.store.4_13410820919839572  UrlMalware.store  UrlMalware.store.4_13410819095905337  UrlMalware.store.4_13410820919832689  UrlSoceng.store  UrlSubresourceFilter.store  UrlSuspiciousSite.store  UrlUws.store  UrlUws.store.4_13410819095908080  UrlUws.store.4_13410820919835343
browser_profile/ShaderCache/: data_1  index
browser_profile/component_crx_cache/: metadata.json
browser_profile/segmentation_platform/: ukm_db
tests/: __init__.py  conftest.py  test_anchor_matching.py
tests/unit/: test_anchor_matcher.py  test_config.py  test_element_ui_fill.py
(+320 files in other folders)
